Collection API Улучшения[70623#239982]