@@ -18,7 +18,7 @@ import static org.junit.Assert.assertThat;
                     {1, 2},
                     {3, 4}
             };
-            List<Integer> expect = Arrays.asList(
+            List<Integer> expect = List.of(
                     1, 2, 3, 4
             );
             List<Integer> result = list.toList(input);
